[tool.poetry]
name = "gfit2fitbit"
version = "0.1.0"
description = ""
authors = ["shiva768 <reika.github@zelretch.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cachetools = "5.2.0"
certifi = "2022.6.15"
charset-normalizer = "2.0.12"
click = "8.1.3"
cloudevents = "1.2.0"
deprecation = "2.1.0"
Flask = "2.1.2"
functions-framework = "3.1.0"
google-api-core = "2.8.2"
google-api-python-client = "2.51.0"
google-auth = "2.8.0"
google-auth-httplib2 = "0.1.0"
googleapis-common-protos = "1.56.2"
gunicorn = "20.1.0"
httplib2 = "0.20.4"
idna = "3.3"
importlib-metadata = "4.11.4"
itsdangerous = "2.1.2"
Jinja2 = "3.1.2"
MarkupSafe = "2.1.1"
packaging = "21.3"
protobuf = "3.20.1"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pyparsing = "3.0.9"
requests = "2.28.0"
rsa = "4.8"
six = "1.16.0"
uritemplate = "4.1.1"
urllib3 = "1.26.9"
watchdog = "2.1.9"
Werkzeug = "2.1.2"
zipp = "3.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
